Wed Feb  2 01:46:54 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/apcs.s: Moved to...
	* regression/tests_pass/environment_variable.s: ...here.
	* regression/hdr: Moved to...
	* regression/tests_pass/include/hdr: ...here.
	* regression/Makefile: Add support for RUNOPT.
	* regression/tests_pass/apcs-3-32bit.s,
	regression/tests_pass/apcs-3-26bit.s,
	regression/tests_pass/apcs-none.s,
	regression/tests_pass/apcs-3.s,
	regression/tests_pass/apcs-3-reentrant.s,
	regression/tests_pass/apcs-3-reentrant-noswstackcheck.s,
	regression/tests_pass/include/predef_reg_test.s
	: New.
	* symbol.c: Fix conditional defined of CPU symbol registers based
	on -APCS option.
	* main.c, main.h: Support -APCS option, remove -apcs26, -apcs32,
	-apcsfpv2 and -apcsfpv3 options.
	* lexAcorn.c, area.c, option.c: Follow -APCS option support.

Thu Jan 27 02:35:32 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* m_fpumem.c, m_fpumem.h: Merge content to...
	* m_fpu.c, m_fpu.h: ...here.
	* Makefile.am: Remove m_fpumem.c.
	* decode.h: Remove include m_fpumem.h.

Thu Jan 27 02:13:13 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (ooDecodeTable): Add NOFP.
	* m_fpu.c, m_fpu.h (c_nofp, CheckFPUsageIsAllowed): New.
	Move M_* from m_fpu.h to m_fpu.c.
	* fix.c, fix.h (fixImmFloat): Move to m_fpu.c, m_fpu.h.

Tue Jan 25 01:38:58 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* storage.c (c_alloc): Don't give an error on negative or zero field
	sizes.
	* regression/tests_pass/record_basic.s: Enhance test for negative and
	0 field sizes.
	* commands.c (c_incbin): Fix BIN/INCBIN implementation.
	* regression/tests_pass/bin.s, regression/tests_pass/include/def.txt:
	Add BIN/INCBIN tests.
	* symbol.c (NeedToOutputSymbol): Centralizes the decision which symbols
	need to be included in the output.
	(SYMBOL_OUTPUT, SYMBOL_ELF_OUTPUT, SYMBOL_AOF_OUTPUT): Remove.
	(findAreaIndex): Remove.
	(symbolSymbolELFOutput): Use the upfront calculated section number